tests/baselines/reference/APISample_Watch.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8907,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8907,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9167,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9167,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9517,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9517,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9541,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9628,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10792,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10792,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10803,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10803,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10813,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10813,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10888,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10888,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10999,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10999,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11019,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11019,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11029,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11029,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11063,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11063,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11066,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11066,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11088,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11088,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11114,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11114,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11117,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11117,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11159,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11159,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11193,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11193,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11204,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11204,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11228,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11228,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11236,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11236,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11240,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11240,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11270,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11270,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11313,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11313,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11500,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11500,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11502,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11502,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11508,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11508,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11510,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11510,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11649,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11649,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11651,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11651,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11653,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11653,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11729,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11729,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_Watch.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The sample sources can be found
             at: https://github.com/Microsoft/TypeScript-wiki/blob/master/Using-the-Compiler-API.md#writing-an-incremental-program-watcher
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var process: any;
    declare var console: any;
    declare var os: any;
    
    import ts = require("typescript");
    
    const formatHost: ts.FormatDiagnosticsHost = {
        getCanonicalFileName: path => path,
        getCurrentDirectory: ts.sys.getCurrentDirectory,
        getNewLine: () => ts.sys.newLine,
    }
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys,
            ts.createSemanticDiagnosticsBuilderProgram,
            reportDiagnostic,
            reportWatchStatusChanged,
        );
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames: ReadonlyArray<string>, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    function reportDiagnostic(diagnostic: ts.Diagnostic) {
        console.error("Error", diagnostic.code, ":",
            ts.flattenDiagnosticMessageText(diagnostic.messageText, formatHost.getNewLine())
        );
    }
    
    /**
     * Prints a diagnostic every time the watch status changes.
     * This is mainly for messages like "Starting compilation" or "Compilation completed".
     */
    function reportWatchStatusChanged(diagnostic: ts.Diagnostic) {
        console.info(ts.formatDiagnostic(diagnostic, formatHost));
    }
    
    watchMain();
    